Enable switching between activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SelectActivity" />
-        <activity android:name=".ShowActivity" />
-        <activity android:name=".EditActivity" />
-        <activity android:name=".EditPersonActivity" />
-        <activity android:name=".Formular01Activity" />
-        <activity android:name=".Formular02Activity" />
-        <activity android:name=".Formular03Activity" />
+        <activity android:name=".SelectActivity"></activity>
+        <activity android:name=".EditActivity"></activity>
+        <activity android:name=".EditPersonActivity"></activity>
+        <activity android:name=".Formular01Activity"></activity>
+        <activity android:name=".Formular02Activity"></activity>
+        <activity android:name=".Formular03Activity"></activity>
         <activity android:name=".Formular04Activity"></activity>
+        <activity android:name=".Formular05Activity"></activity>
+        <activity android:name=".InformationActivity"></activity>
     </application>
 
 </manifest>
