--- a/.gitignore
+++ b/.gitignore
@@ -34,12 +34,13 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# Intellij
+# IntelliJ
 *.iml
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/libraries
 .idea/compiler.xml
+.idea/runConfigurations.xml
 
 # Keystore files
 *.jks
