--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by .ignore support plugin (hsz.mobi)
+
 ### Android template
+
 # Built application files
 *.apk
 *.ap_
@@ -40,13 +42,15 @@ captures/
 .idea/tasks.xml
 .idea/libraries
 .idea/compiler.xml
-.idea/runConfigurations.xml
+# .idea/runConfigurations.xml
 
 # Keystore files
 *.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
+
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
